--- a/style.css
+++ b/style.css
@@ -178,9 +178,11 @@ body {
     .hero {
         height: 70vh;
         padding: 0 15px;
+         /* Horizontal crop (slight shift left) */
+        background-position-x: 60%;
 
-        /* shift focus to the RIGHT side of the image */
-        background-position: 60% 35%;;
+        /* Vertical crop (move couple LOWER) */
+        background-position-y: 55%;
 
         display: flex;
         justify-content: center;
@@ -193,8 +195,8 @@ body {
     }
 
     .hero-content h1 {
-        font-size: 60px;
-        line-height: 1.1;
+        font-size: 40px;
+ 
     }
 
     .hero-content p {
@@ -285,6 +287,7 @@ body {
         height: 300px;
     }
 }
+
 
 
 
